infra/web/ingress-mugenradio.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mugenradio
  namespace: radio
spec:
  ingressClassName: traefik
  rules:
    - host: mugenradio.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port: { number: 80 }
    - host: www.mugenradio.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port: { number: 80 }
